# CPlayground

./: .gitignore  .gitmodules
PersonStack/: CMakeLists.txt  main.c
PersonStack/lib/include/: person.h  personstack.h
PersonStack/lib/src/: person.c  personstack.c
